фикс размера коробки

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -7400,7 +7400,7 @@ padding-right: 6rem;
   position: relative;
   display: block;
   width: 312rem;
-  height: 312rem;
+  height: 207rem;
   margin: 0 24rem;
   margin-bottom: 24rem;
 }
@@ -7418,7 +7418,7 @@ padding-right: 6rem;
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
