--- a/storage/templates/storage/redesign/storage_blocks/lootbox.html
+++ b/storage/templates/storage/redesign/storage_blocks/lootbox.html
@@ -6,8 +6,8 @@
 
 {% block content %}
 <section class="box custom-scroll">
-		<!-- Заголовок -->
-		<h1 class="box__title ct__page-title">Новогодние сундуки</h1>
+    <!-- Заголовок -->
+    <h1 class="box__title ct__page-title">Сундуки с наградами</h1>
 
 
     <!-- Табы -->
@@ -47,7 +47,7 @@
     <!-- Блок "Мои сундуки" -->
     <div class="box__block active">
       <p class="box__desc">
-        Открывайте новогодние сундуки и получайте разнообразные награды!
+        Открывайте сундуки и получайте разнообразные награды!
       </p>
 
       <div class="box__pic">
@@ -169,7 +169,7 @@
     <!-- Блок "Приобрести" -->
     <div class="box__block">
       <p class="box__desc">
-        Приобретите наборы новогодних сундуков с приятной выгодой!
+        Приобретите наборы сундуков с приятной выгодой!
       </p>
 
       <ul class="box__buyList">
