--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -205,7 +205,7 @@
 
 					<!-- лутбоксы -->
 			  		<div class="store__wp-wrapper">
-						<h2>Новогодние сундуки</h2>
+						<h2>Сундуки с наградами</h2>
 						<picture>
 							<img src="{% static 'img/chest.png' %}" alt="wild_pass" class="eduBlock6">
 						</picture>
