--- a/player/templates/player/eula.html
+++ b/player/templates/player/eula.html
@@ -6,7 +6,7 @@
 <body>
     <h1 align="center">Пользовательское соглашение</h1>
     <div flex style="margin-top: 50px">
-Пользовательское Соглашение регулирует взаимоотношения между вами и Горшениным А.И. (далее - Администрация), относительно вашего пользования игрой Wild Politics ( wildpolitics.online и все поддомены/страницы, далее - Проект )  в том числе всей информацией, текстами, графикой, программным обеспечением и услугами, доступными вам. Пользуясь данным веб-сайтом и услугами, предоставляемыми на нем, просматривая данный веб-сайт, вы соглашаетесь с условиями настоящего Пользовательского Соглашения. Если вы НЕ согласны со всеми условиями данного Пользовательского Соглашения, пожалуйста, НЕ пользуйтесь данным сайтом.
+Пользовательское Соглашение регулирует взаимоотношения между вами и Горшениным А.И. (далее - Администрация), относительно вашего пользования игрой Wild Politics ( wildpolitics.ru и все поддомены/страницы, далее - Проект )  в том числе всей информацией, текстами, графикой, программным обеспечением и услугами, доступными вам. Пользуясь данным веб-сайтом и услугами, предоставляемыми на нем, просматривая данный веб-сайт, вы соглашаетесь с условиями настоящего Пользовательского Соглашения. Если вы НЕ согласны со всеми условиями данного Пользовательского Соглашения, пожалуйста, НЕ пользуйтесь данным сайтом.
 <br>
 Администрация оставляет за собой право изменять Пользовательское Соглашение в любое время. Новая редакция Пользовательского Соглашения вступает в силу с момента ее размещения на веб-сайте Проекта. Пожалуйста, ознакомьтесь с самой последней редакцией Пользовательского Соглашения, чтобы быть в курсе всех условий и положений, регулирующих ваше пользование веб-сайтом.
 <br>
