--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -14,6 +14,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
 	<title>{{ page_name }}</title>
+	<script src="{% static 'redesign/js/timers_fix.js' %}?{{ csrf_token }}"></script>
 	<script
 	  src="https://code.jquery.com/jquery-3.6.0.min.js"
 	  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
