--- a/region/templates/region/redesign/map.html
+++ b/region/templates/region/redesign/map.html
@@ -199,6 +199,71 @@
 
 {% block for_scripts_and_css %}
 <script>
+L.RotatedMarker = L.Marker.extend({
+  options: {
+    rotationAngle: 0,
+    rotationOrigin: "",
+  },
+
+  initialize: function (latlng, options) {
+    L.Marker.prototype.initialize.call(this);
+
+    L.Util.setOptions(this, options);
+    this._latlng = L.latLng(latlng);
+
+    var iconOptions = this.options.icon && this.options.icon.options;
+    var iconAnchor = iconOptions && this.options.icon.options.iconAnchor;
+    if (iconAnchor) {
+      iconAnchor = iconAnchor[0] + "px " + iconAnchor[1] + "px";
+    }
+
+    this.options.rotationOrigin =
+      this.options.rotationOrigin || iconAnchor || "center bottom";
+    this.options.rotationAngle = this.options.rotationAngle || 0;
+
+    // Ensure marker keeps rotated during dragging
+    this.on("drag", function (e) {
+      e.target._applyRotation();
+    });
+  },
+
+  onRemove: function (map) {
+    L.Marker.prototype.onRemove.call(this, map);
+  },
+
+  _setPos: function (pos) {
+    L.Marker.prototype._setPos.call(this, pos);
+    this._applyRotation();
+  },
+
+  _applyRotation: function () {
+    if (this.options.rotationAngle) {
+      this._icon.style[L.DomUtil.TRANSFORM + "Origin"] =
+        this.options.rotationOrigin;
+
+      this._icon.style[L.DomUtil.TRANSFORM] +=
+        " rotateZ(" + this.options.rotationAngle + "deg)";
+    }
+  },
+
+  setRotationAngle: function (angle) {
+    this.options.rotationAngle = angle;
+    this.update();
+    return this;
+  },
+
+  setRotationOrigin: function (origin) {
+    this.options.rotationOrigin = origin;
+    this.update();
+    return this;
+  },
+});
+
+L.rotatedMarker = function (latlng, options) {
+  return new L.RotatedMarker(latlng, options);
+};
+
+
 var line = null;
 
 
@@ -280,6 +345,31 @@ function addMarker(coordinates) {
      tileSize: 256,
      accessToken: 'your.mapbox.access.token'
  }).addTo(mymap);
+
+ {% if player.destination %}
+
+  var startCoords = [{{ player.region.north }}, {{ player.region.east }}];
+  const endCoords = [{{ player.destination.north }}, {{ player.destination.east }}];
+
+  const duration = {% localize off %}{{ duration }}{% endlocalize %}; // ДЛительность всего полёта: 60 секунд
+  const estimate = {% localize off %}{{ estimate }}{% endlocalize %}; // Пример: 30 секунд уже прошло
+
+  startCoords = adjustStartCoords(startCoords, endCoords, duration, estimate);
+
+  var angle = calculateAngle(startCoords, endCoords);
+
+  const planeIcon = L.icon({
+	iconUrl: '/static/img/flight.png',
+	iconSize: [50, 50],
+	iconAnchor: [25, 25],
+  });
+
+  var planeMarker = L.rotatedMarker(startCoords, { icon: planeIcon, rotationAngle: angle });
+  planeMarker.addTo(mymap);
+
+  animateFlight(startCoords, endCoords, duration-estimate);
+
+ {% endif %}
 
  var latlngs = L.rectangle(bounds).getLatLngs();
 
