--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -7418,7 +7418,7 @@ padding-right: 6rem;
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
 }
 
