--- a/storage/templates/storage/redesign/storage_blocks/lootbox.html
+++ b/storage/templates/storage/redesign/storage_blocks/lootbox.html
@@ -298,7 +298,7 @@
       </h3>
 
 			<div class="box__pic box__pic--anima">
-        <img src="{% static 'img/chest.png' %}" alt="">
+        <img src="{% static 'img/chest_opened.png' %}" alt="">
       </div>
 
 			<h3 class="box__subTitle">Вот что было в сундуке:</h3>
