--- a/region/templates/region/redesign/region_view.html
+++ b/region/templates/region/redesign/region_view.html
@@ -255,8 +255,8 @@
                         {% if terrain.title == 'Равнины' %}
                         <!--поля-->
                         <svg
-                           width="34"
-                           height="34"
+                           width="32rem"
+                           height="32rem"
                            viewBox="0 0 34 34"
                            fill="none"
                            version="1.1"
