--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2368,6 +2368,300 @@ a {
   height: 100%;
 }
 
+/*! articles */
+
+.articles {
+  display: flex;
+  flex-direction: column;
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100% - 60rem);
+  overflow-x: hidden;
+  font-size: 14rem;
+}
+.articles__title {
+  position: relative;
+  margin: 0;
+  margin-bottom: 24rem;
+}
+.articles__addNewBtn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 24rem;
+  width: 30rem;
+  height: 30rem;
+  display: block;
+  border: 0;
+  background-color: transparent;
+  padding: 0;
+}
+.articles__addNewBtn svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.articles__inner {
+  padding: 0 12rem;
+}
+.articles__tabs {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 12rem;
+  width: 100%;
+}
+.articles__tabs button {
+  display: block;
+  padding: 0;
+  border: 0;
+  height: 24rem;
+  line-height: 24rem;
+  text-align: center;
+  background-color: var(--c30);
+  color: var(--c10one);
+}
+.articles__tabs button.active {
+  background-color: var(--c10two);
+  color: var(--c60);
+}
+.articles__search {
+  width: calc(100% - 24rem);
+  display: grid;
+  grid-template-columns: 30rem 1fr;
+  gap: 5rem;
+  margin: 0 12rem;
+  margin-bottom: 12rem;
+  height: 30rem;
+  border: 1px solid var(--c10two);
+}
+.articles__search button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(30rem - 2px);
+  width: 30rem;
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+}
+.articles__search button svg {
+  display: block;
+  width: 20rem;
+  height: 20rem;
+}
+.articles__search input {
+  display: block;
+  line-height: calc(30rem - 2px);
+  color: var(--c10one);
+  border: 0;
+  background-color: transparent;
+}
+.articles__list {
+  display: flex;
+  flex-direction: column;
+  gap: 12rem;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.articles__item {
+  display: flex;
+  height: 60rem;
+  background-color: var(--c30);
+}
+.articles__item > img,
+.articles__item > svg {
+  display: block;
+  width: 60rem;
+  height: 60rem;
+}
+.articles__itemContent {
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
+  width: 100%;
+  padding: 4rem;
+}
+.articles__itemText {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  justify-content: space-between;
+}
+.articles__itemText h2 {
+  margin: 0;
+  font-weight: 400;
+  font-size: 14rem;
+  width: 198rem;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -ms-line-clamp: 2;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  display: -webkit-box;
+  display: box;
+  word-wrap: break-word;
+  -webkit-box-orient: vertical;
+  box-orient: vertical;
+}
+.articles__itemText a {
+  color: var(--c10two);
+  width: 198rem;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.articles__itemInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.articles__itemInfo span:nth-of-type(1) {
+  display: flex;
+  align-items: center;
+  gap: 4rem;
+}
+.articles__itemInfo span:nth-of-type(1) svg {
+  display: inline-block;
+  width: 16rem;
+  height: 16rem;
+}
+.articles__itemInfo span:nth-of-type(2) {
+  color: var(--c10two);
+}
+.articles__select {
+  margin-top: 12rem;
+}
+.articles__labelSelect {
+  margin-top: 12rem;
+}
+.articles__titleInput {
+  position: relative;
+  display: block;
+  height: 24rem;
+  width: 100%;
+  margin-bottom: 12rem;
+}
+.articles__titleInput::before,
+.articles__textarea::before {
+  position: absolute;
+  pointer-events: none;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  content: '';
+  border: solid 1px var(--c10one);
+  opacity: 0.5;
+}
+.articles__titleInput input {
+  display: block;
+  line-height: 24rem;
+  background-color: transparent;
+  color: var(--c10one);
+  width: 100%;
+  padding: 0 12rem;
+  border: 0;
+}
+.articles__textarea {
+  position: relative;
+  width: 100%;
+  margin-bottom: 12rem;
+}
+.articles__textarea textarea {
+  padding: 12rem;
+  background-color: transparent;
+  display: block;
+  width: 100%;
+  line-height: 1.5;
+  color: var(--c10one);
+  margin-bottom: 12rem;
+  resize: none;
+  border: 0;
+}
+.articles__textContent * {
+  font-size: 14rem;
+}
+.articles__textContent img {
+  display: block;
+  height: auto;
+  max-width: 100%;
+}
+.articles__textContent h1,
+.articles__textContent h2,
+.articles__textContent h3,
+.articles__textContent h4,
+.articles__textContent h5,
+.articles__textContent h6 {
+  font-size: 16rem;
+  margin: 20rem 0;
+}
+.articles__voteBtns {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40rem;
+  font-size: 30rem;
+}
+.articles__voteBtns button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40rem;
+  height: 40rem;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+}
+.articles__voteBtns span {
+  font-size: 24rem;
+  color: var(--c10two);
+}
+.articles__messages {
+  padding: 0 12rem;
+}
+.articles__noMessages {
+  text-align: center;
+  font-size: 16rem;
+  margin-top: 0;
+  margin-bottom: auto;
+  letter-spacing: -1px;
+}
+
+@media (min-width: 1000px) {
+  .articles {
+    height: calc(100% - 100rem);
+    margin-left: 330rem;
+    margin-top: 100rem;
+  }
+  .articles__inner {
+    width: 900rem;
+    margin: 0 auto;
+  }
+  .articles__itemText h2 {
+    width: auto;
+  }
+  .articles__messages {
+    width: 900rem;
+    margin: 0 auto;
+  }
+  .articles__messages .overview__chat-message-body p {
+    width: 100%;
+  }
+}
+
+/*! DecorLine */
+
+.DecorLine {
+  height: 1px;
+  margin: 12rem;
+  background-image: linear-gradient(to right, transparent, var(--c10one), transparent);
+}
+
 /*! overview */
 
 .overview {
@@ -3218,6 +3512,11 @@ p.overview__love-stat-timer {
   bottom: 60rem;
 }
 
+.overview__chat-controls--static {
+  position: relative;
+  bottom: 0;
+}
+
 .overview__chat-controls-input {
   display: block;
   width: 272rem;
@@ -3266,6 +3565,10 @@ p.overview__love-stat-timer {
   filter: drop-shadow(0 0 10rem rgba(0, 0, 0, 0.5));
 }
 
+.overview__stickers--b60 {
+  bottom: 60rem;
+}
+
 .overview__stickers-close-overlay {
   position: fixed;
   bottom: 222rem;
@@ -3306,6 +3609,7 @@ p.overview__love-stat-timer {
   padding-left: 0;
   list-style: none;
   width: 320rem;
+  margin: 0;
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
@@ -3621,6 +3925,10 @@ p.overview__love-stat-timer {
   .overview__stickers-container::-webkit-scrollbar-thumb {
     background-color: var(--c30);
   }
+  .overview__stickers-containers--w100 .overview__stickers-container {
+    justify-content: flex-start;
+    gap: 4rem;
+  }
   .overview__stickers-tabs {
     scrollbar-color: var(--c30) transparent;
     scrollbar-width: thin;
@@ -3635,6 +3943,18 @@ p.overview__love-stat-timer {
   }
   .overview__love-stat-close {
     display: none;
+  }
+  .overview__chat-controls--pc-w900 {
+    width: 900rem;
+    margin: 0 auto;
+    position: relative;
+  }
+  .overview__stickers--b60 {
+    width: 100%;
+    bottom: 67rem;
+  }
+  .overview__stickers--b60 .overview__stickers-close-overlay {
+    width: 100%;
   }
 }
 
@@ -7418,7 +7738,7 @@ padding-right: 6rem;
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -8317,6 +8637,16 @@ padding-right: 6rem;
   height: 10rem;
   content: '';
   background-color: var(--c30);
+}
+
+.ct__page-title-elipsis {
+  display: block;
+  margin: 0 12rem;
+  padding: 0 !important;
+  width: calc(100% - 24rem);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 /*! ----- ct__s ----- */
@@ -9385,4 +9715,8 @@ padding-right: 6rem;
   transform: translateY(-110%) scaleX(-1);
   border-radius: 50%;
   background-color: var(--c60);
+}
+
+.note-group-select-from-files {
+  display: none;
 }
