--- a/article/static/django_summernote.css
+++ b/article/static/django_summernote.css
@@ -16,3 +16,7 @@ form .summernote-div .dropdown-menu {
 .note-editor.note-frame .note-editing-area {
     background-color: var(--c60) !important;
 }
+
+body > div.note-editor.note-frame.panel.panel-default > div.modal.note-modal.in > div > div > div.modal-body > div.form-group.note-form-group.note-group-select-from-files {
+    display: none !important;
+}
