--- a/article/static/django_summernote.css
+++ b/article/static/django_summernote.css
@@ -20,3 +20,7 @@ form .summernote-div .dropdown-menu {
 body > div.note-editor.note-frame.panel.panel-default > div.modal.note-modal.in > div > div > div.modal-body > div.form-group.note-form-group.note-group-select-from-files {
     display: none !important;
 }
+
+.note-editor.note-frame .note-editing-area .note-editable {
+	color: var(--c10one) !important; 
+}
