--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2473,7 +2473,7 @@ a {
   height: 60rem;
   background-color: var(--c30);
 }
-.articles__item > img {
+.articles__item > img, .articles__item > svg  {
   display: block;
   width: 60rem;
   height: 60rem;
