--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2586,6 +2586,9 @@ a {
   resize: none;
   border: 0;
 }
+.articles__textContent a {
+    color: var(—c10two);
+}
 .articles__voteBtns {
   display: flex;
   align-items: center;
