--- a/article/static/django_summernote.css
+++ b/article/static/django_summernote.css
@@ -24,3 +24,7 @@ body > div.note-editor.note-frame.panel.panel-default > div.modal.note-modal.in 
 .note-editor.note-frame .note-editing-area .note-editable {
 	color: var(--c10one) !important; 
 }
+
+.note-editor.note-frame .note-editing-area .note-editable a {
+    color: var(--c10two);
+}
