--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2587,7 +2587,7 @@ a {
   border: 0;
 }
 .articles__textContent a {
-    color: var(—c10two);
+    color: var(--c10two);
 }
 .articles__voteBtns {
   display: flex;
