--- a/article/static/django_summernote.css
+++ b/article/static/django_summernote.css
@@ -25,6 +25,6 @@ body > div.note-editor.note-frame.panel.panel-default > div.modal.note-modal.in 
 	color: var(--c10one) !important; 
 }
 
-.note-editor.note-frame .note-editing-area .note-editable a {
+.note-editor a {
     color: var(--c10two);
 }
