--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -30,6 +30,17 @@
 				{% endif %}
 			</button>
 		</li>
+		<li class="nav__item">
+			<a href="/articles" class="nav__link icon-paper">
+				<span>статьи</span>
+				<div class="nav__svg-wrapper">
+					<svg width="242" height="193" viewBox="0 0 242 193" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M205.5 164.5C192.3 164.5 189.333 155.833 189.5 151.5V12.5M205.5 164.5C211 164.5 222 161.9 222 151.5V31.5M205.5 164.5V175C205.5 185.8 216.5 188.833 222 189M205.5 164.5H21.5M205.5 20.5H222V31.5M205.5 20.5V148.5M205.5 20.5V12.5H189.5M189.5 12.5V4H6H4V149.5C4 160.7 16.1667 164.5 21.5 164.5M222 31.5H237.5V175C237.5 179.667 234.4 189 222 189M222 189H33C29.1667 188.833 21.5 185.8 21.5 175V164.5M27.5 20H166.5M166.5 48H27.5M27.5 34H166.5M123 72H152.5M158.5 72H177.5M123 88.5H133M142 88.5H177.5M177.5 104.5H171.5M163.5 104.5H148.5M142 104.5H123M123 119.5H129H138.5H154.5H158.5H177.5M123 133.5H154.5M163.5 133.5H177.5M123 146.5H131.5M140.5 146.5H177.5M109.5 146.5V68.5H21.5V146.5H109.5Z" stroke="var(--c10two)" stroke-width="8"/>
+						<path d="M53.2524 128L42.5 89H47.3386L55.5564 120.764H55.9404L64.3119 89H69.6881L78.0596 120.764H78.4436L86.6614 89H91.5L80.7476 128H75.8323L67.1536 96.9219H66.8464L58.1677 128H53.2524Z" fill="var(--c10two)"/>
+					</svg>
+				</div>
+			</a>
+		</li>
 		<li class="nav__item eduBlockMining">
 			<a href="/mining" class="nav__link icon-main">
 				<span>{% trans 'добыча' context "menu" %}</span>
