--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -97,6 +97,13 @@
 				</div>
 
 				<div class="ct__s">
+					<h2 class="ct__s-title">{% trans 'популярность' context "profile" %}</h2>
+					<p class="ct__s-text">
+						{% if carma > 0 %}+{% endif %}{{ carma }}
+					</p>
+				</div>
+
+				<div class="ct__s">
 					<h2 class="ct__s-title">{% trans 'характеристики' context "profile" %}</h2>
 					<p class="ct__s-text">
 						<font color="FF0000">{{ char.power }}</font>
