--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -97,9 +97,12 @@
 				</div>
 
 				<div class="ct__s">
-					<h2 class="ct__s-title">{% trans 'популярность' context "profile" %}</h2>
+					<h2 class="ct__s-title">{% trans 'известность' context "profile" %}</h2>
 					<p class="ct__s-text">
 						{% if carma > 0 %}+{% endif %}{{ carma }}
+						<a href="/character_articles/{% localize off %}{{ char.pk }}{% endlocalize %}/">
+							{% trans '(к статьям)' context "profile" %}
+						</a>
 					</p>
 				</div>
 
