ограничение на число статей

--- a/article/templates/article/articles.html
+++ b/article/templates/article/articles.html
@@ -28,7 +28,7 @@
 	<h1 class="articles__title ct__page-title">
   Статьи
 
-    {% if not player.articles_ban %}
+    {% if not player.articles_ban and can_post %}
   <button class="articles__addNewBtn" onclick="window.location.href = '/new_article/'" style="cursor: pointer">
 	<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
 	  <path d="M30 1.66667C30 0.87 29.3683 0 28.3333 0H1.66667C0.633333 0 0 0.865 0 1.66667V28.3333C0 29.3683 0.866667 30 1.66667 30H28.3333C29.13 30 30 29.3683 30 28.3333V1.66667ZM13.75 13.7533V7.92C13.75 7.23 14.31 6.67 15 6.67C15.69 6.67 16.25 7.23 16.25 7.92V13.7533H22.0833C22.7733 13.7533 23.3333 14.3133 23.3333 15.0033C23.3333 15.6933 22.7733 16.2533 22.0833 16.2533H16.25V22.0867C16.25 22.7767 15.69 23.3367 15 23.3367C14.31 23.3367 13.75 22.7767 13.75 22.0867V16.2533H7.91667C7.22667 16.2533 6.66667 15.6933 6.66667 15.0033C6.66667 14.3133 7.22667 13.7533 7.91667 13.7533H13.75Z" fill="var(--c10two)"/>
